--- a/Vueling.Distributed.WebServices/Vueling.Distributed.WebServices.csproj
+++ b/Vueling.Distributed.WebServices/Vueling.Distributed.WebServices.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\User.cs" />
     <Compile Include="StudentWebService.svc.cs">
       <DependentUpon>StudentWebService.svc</DependentUpon>
     </Compile>
