--- a/Vueling.Distributed.WebServices/Vueling.Distributed.WebServices.csproj
+++ b/Vueling.Distributed.WebServices/Vueling.Distributed.WebServices.csproj
@@ -124,6 +124,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\AutofacConfiguration.cs" />
+    <Compile Include="Errors\GlobalErrorBehaviorAttribute.cs" />
+    <Compile Include="Errors\GlobalErrorHandler.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
